# ignisia

./: README.md
backend/: .gitignore  main.py  pyproject.toml
backend/AI_validate/: app.py  index.html  requirements.txt
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/doc_rag/: app.py  main.py  pyproject.toml  requirements.txt
backend/doc_rag/upload/: Erwin Center Park Pool & Bathhouse_output.json  Model Request For Proposal for Agreement for Procurement of Power_output.json  REQUEST FOR PROPOSAL FOR ARCHITECTURAL DESIGN SERVICES GOODWILL EXCEL CENTER_output.json
backend/example/: output.json  question_formation.json
backend/pdf_generation/: main.py  node_pdf_bridge.py  pdf_generator.py  proposal_pdf.py  proposal_pdf_clean.py  pyproject.toml  rag_service.py  requirements.txt  rfp_pdf_mapper.py  schemas.py
backend/pricing_comp/: __init__.py  ai_decision_engine.py  knowbase.json  pricing_engine.py
backend/reason/: __init__.py  external.json  proposal.json  strategic_advisor.py
backend/rfp_parser/: __init__.py  app.py  parser.py  prompts.py  requirements.txt  utils.py
backend/rfp_pricing_agent/: README.md  __init__.py  api.py  orchestrator.py  requirements.txt
backend/rfp_pricing_agent/knowledge_base/: history.json
backend/rfp_pricing_agent/servers/: currency_import_mcp.py  gst_mcp.py  labor_costs_mcp.py  material_prices_mcp.py
backend/rfp_pricing_agent/tests/: test_servers.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/components/: ai-validate-demo.tsx  (+13 more)
(+12 files in other folders)
