[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "langchain>=0.1.13",
    "langchain-openai>=0.1.1",
    "langgraph>=0.0.30",
    "pdfplumber>=0.11.0",
    "pydantic>=2.6.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.27.0",
]
